@@ -12,6 +12,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Date;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -41,7 +42,7 @@ public class DistributionService extends GradService {
             } catch (JsonProcessingException ex) {
                 throw new RuntimeException(ex);
             }
-        }).toList();
+        }).collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
